--- a/roles/sssd_auth/vars/main.yml
+++ b/roles/sssd_auth/vars/main.yml
@@ -1,14 +1,14 @@
 ---
 #----------------Fill Me In----------------
-realm_domain:
-realm_ad_ou:
+realm_domain: domain.thewoodwards.me
+realm_ad_ou: ou=Servers,ou=Computers,ou=domain.thewoodwards.me,dc=domain,dc=thewoodwards,dc=me
 
 #If your group has spaces in it, you must escape the space (\)
 #for example, for domain admins, it would look like this: domain\ admins
-sudo_group:
+sudo_group: domain\ admins
 
 # It is important that krb5 domain is in ALL CAPITALS
-krb5_default_realm:
+krb5_default_realm: THEWOODWARDS
 
 #----------------DEFAULTS-----------------
 #Uncomment and change as needed
