--- a/roles/sssd_auth/vars/secrets.yml
+++ b/roles/sssd_auth/vars/secrets.yml
@@ -1,4 +1,4 @@
-kerberos_user: 
-kerberos_user_password: 
+kerberos_user: admin
+kerberos_user_password: JMWccwfam/2016!!
 
 #encrypt me afterwards by running ansible-vault encrypt path_to_file 
